Add file handling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
     <img src="assets/sky.jpg"  id="pixelitimg" alt="">
     <canvas id="pixelitcanvas"></canvas>
-    <button id="multi-run" onclick="pxm.multi()">Press to Run</button>
+
+    <input type="file" name="client-file" id="get-files" multiple/>
+    <button id="open_files" onclick="open_files()">Press to Pixelate and Download</button>
 
 </body>
 </html>
