--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>PixelIT multi</title>
 </head>
 <body>
@@ -10,11 +11,15 @@
     <script src="dist/pixelit.js"></script>
     <script src="src/custom_main.js" defer></script>
 
-    <img src="assets/sky.jpg"  id="pixelitimg" alt="">
-    <canvas id="pixelitcanvas"></canvas>
-
-    <input type="file" name="client-file" id="get-files" multiple/>
-    <button id="open_files" onclick="open_files()">Press to Pixelate and Download</button>
+    <div>
+        <img src="assets/sky.jpg"  id="pixelitimg" alt="">
+        <canvas id="pixelitcanvas"></canvas>
+    
+        <input type="number" id="blocksize_inp" value="32" max="64" min="1">
+    
+        <input type="file" name="client-file" id="get-files" multiple/>
+        <button id="open_files" onclick="open_files()">Press to Pixelate and Download</button>
+    </div>
 
 </body>
 </html>
