Moved pixelit_multi to src

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>PixelIT multi</title>
 </head>
 <body>
-    <script src="dist/pixelit_multi.js"></script>
-    <script src="dist/pixelit.js"></script>
+    <script src="src/pixelit_multi.js"></script>
+    <script src="src/pixelit.js"></script>
     <script src="src/custom_main.js" defer></script>
 
     <div>
