--- a/index.html
+++ b/index.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>PixelIT multi</title>
 </head>
+
 <body>
     <script src="src/pixelit_multi.js"></script>
     <script src="src/pixelit.js"></script>
     <script src="src/custom_main.js" defer></script>
 
-    <div>
-        <img src="assets/sky.jpg"  id="pixelitimg" alt="">
+    <div class="container">
+        <img src="assets/sky.jpg" id="pixelitimg" alt="">
         <canvas id="pixelitcanvas"></canvas>
-    
-        <input type="number" id="blocksize_inp" value="16" max="64" min="1">
-    
-        <input type="file" name="client-file" id="get-files" multiple/>
-        <button id="open_files" onclick="open_files()">Press to Pixelate and Download</button>
+
+        <div class="controls">
+            <label for="blocksize_inp">Block Size:</label>
+            <input type="number" id="blocksize_inp" value="16" max="64" min="1" placeholder="Enter block size">
+
+            <label for="get-files" class="custom-file-upload">
+                Upload Image
+            </label>
+            <input type="file" name="client-file" id="get-files" multiple />
+
+            <button id="open_files" onclick="open_files()">Pixelate and Download</button>
+        </div>
     </div>
 
 </body>
+
 </html>
